crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Basic_(f15db7dc447d0795).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_await.md - Invalid await diagnostics - Basic
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
1 | async def main() -> None:
2 |     await 1  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `Literal[1]` is not awaitable
   --> src/mdtest_snippet.py:2:11
    |
  2 |     await 1  # error: [invalid-await]
    |           ^
    |
   ::: stdlib/builtins.pyi:350:7
    |
350 | class int:
    |       --- type defined here
info: `__await__` is missing

```
