crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Custom_type_with_mis…_(9ce1ee3cd1c9c8d1).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_await.md - Invalid await diagnostics - Custom type with missing `__await__`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
1 | class MissingAwait:
2 |     pass
3 | 
4 | async def main() -> None:
5 |     await MissingAwait()  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `MissingAwait` is not awaitable
 --> src/mdtest_snippet.py:5:11
  |
5 |     await MissingAwait()  # error: [invalid-await]
  |           ^^^^^^^^^^^^^^
  |
 ::: src/mdtest_snippet.py:1:7
  |
1 | class MissingAwait:
  |       ------------ type defined here
  |
info: `__await__` is missing

```
