crates/ty_python_semantic/resources/mdtest/snapshots/invalid_type_param_o…_-_Invalid_Type_Param_O…_(8ff6f101710809cb).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_type_param_order.md - Invalid Type Param Order
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_type_param_order.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar, Generic
 2 | 
 3 | T1 = TypeVar("T1", default=int)
 4 | T2 = TypeVar("T2")
 5 | T3 = TypeVar("T3")
 6 | 
 7 | class Foo(Generic[T1, T2]):  # error: [invalid-type-param-order]
 8 |     pass
 9 | 
10 | class Bar(Generic[T2, T1, T3]):  # error: [invalid-type-param-order]
11 |     pass
```

# Diagnostics

```
error[invalid-type-param-order]: Type parameter T2 without a default follows type parameter with a default
 --> src/mdtest_snippet.py:7:7
  |
5 | T3 = TypeVar("T3")
6 |
7 | class Foo(Generic[T1, T2]):  # error: [invalid-type-param-order]
  |       ^^^^^^^^^^^^^^^^^^^^
8 |     pass
  |
info: rule `invalid-type-param-order` is enabled by default

```

```
error[invalid-type-param-order]: Type parameter T3 without a default follows type parameter with a default
  --> src/mdtest_snippet.py:10:7
   |
 8 |     pass
 9 |
10 | class Bar(Generic[T2, T1, T3]):  # error: [invalid-type-param-order]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
11 |     pass
   |
info: rule `invalid-type-param-order` is enabled by default

```
