crates/ty_python_semantic/resources/mdtest/snapshots/invalid_type_paramet…_-_Invalid_Order_of_Leg…_(eaa359e8d6b3031d).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_type_parameter_order.md - Invalid Order of Legacy Type Parameters
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_type_parameter_order.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar, Generic, Protocol
 2 | 
 3 | T1 = TypeVar("T1", default=int)
 4 | 
 5 | T2 = TypeVar("T2")
 6 | T3 = TypeVar("T3")
 7 | 
 8 | DefaultStrT = TypeVar("DefaultStrT", default=str)
 9 | 
10 | class SubclassMe(Generic[T1, DefaultStrT]):
11 |     x: DefaultStrT
12 | 
13 | class Baz(SubclassMe[int, DefaultStrT]):
14 |     pass
15 | 
16 | # error: [invalid-generic-class] "Type parameter `T2` without a default cannot follow earlier parameter `T1` with a default"
17 | class Foo(Generic[T1, T2]):
18 |     pass
19 | 
20 | class Bar(Generic[T2, T1, T3]):  # error: [invalid-generic-class]
21 |     pass
22 | 
23 | class Spam(Generic[T1, T2, DefaultStrT, T3]):  # error: [invalid-generic-class]
24 |     pass
25 | 
26 | class Ham(Protocol[T1, T2, DefaultStrT, T3]):  # error: [invalid-generic-class]
27 |     pass
28 | 
29 | class VeryBad(
30 |     # error: [invalid-generic-class]
31 |     # error: [invalid-generic-class]
32 |     Protocol[T1, T2, DefaultStrT, T3],
33 |     Generic[T1, T2, DefaultStrT, T3],
34 | ): ...
```

# Diagnostics

```
error[invalid-generic-class]: Type parameters without defaults cannot follow type parameters with defaults
  --> src/mdtest_snippet.py:17:19
   |
17 | class Foo(Generic[T1, T2]):
   |                   ^^^^^^
   |                   |
   |                   Type variable `T2` does not have a default
   |                   Earlier TypeVar `T1` does
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", default=int)
   | ------------------------------- `T1` defined here
 4 |
 5 | T2 = TypeVar("T2")
   | ------------------ `T2` defined here

```

```
error[invalid-generic-class]: Type parameters without defaults cannot follow type parameters with defaults
  --> src/mdtest_snippet.py:20:19
   |
20 | class Bar(Generic[T2, T1, T3]):  # error: [invalid-generic-class]
   |                   ^^^^^^^^^^
   |                   |
   |                   Type variable `T3` does not have a default
   |                   Earlier TypeVar `T1` does
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", default=int)
   | ------------------------------- `T1` defined here
 4 |
 5 | T2 = TypeVar("T2")
 6 | T3 = TypeVar("T3")
   | ------------------ `T3` defined here

```

```
error[invalid-generic-class]: Type parameters without defaults cannot follow type parameters with defaults
  --> src/mdtest_snippet.py:23:20
   |
23 | class Spam(Generic[T1, T2, DefaultStrT, T3]):  # error: [invalid-generic-class]
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
   |                    |
   |                    Type variables `T2` and `T3` do not have defaults
   |                    Earlier TypeVar `T1` does
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", default=int)
   | ------------------------------- `T1` defined here
 4 |
 5 | T2 = TypeVar("T2")
   | ------------------ `T2` defined here

```

```
error[invalid-generic-class]: Type parameters without defaults cannot follow type parameters with defaults
  --> src/mdtest_snippet.py:26:20
   |
26 | class Ham(Protocol[T1, T2, DefaultStrT, T3]):  # error: [invalid-generic-class]
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
   |                    |
   |                    Type variables `T2` and `T3` do not have defaults
   |                    Earlier TypeVar `T1` does
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", default=int)
   | ------------------------------- `T1` defined here
 4 |
 5 | T2 = TypeVar("T2")
   | ------------------ `T2` defined here

```

```
error[invalid-generic-class]: Cannot both inherit from subscripted `Protocol` and subscripted `Generic`
  --> src/mdtest_snippet.py:32:5
   |
32 |     Protocol[T1, T2, DefaultStrT, T3],
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Remove the type parameters from the `Protocol` base
   |
31 |     # error: [invalid-generic-class]
   -     Protocol[T1, T2, DefaultStrT, T3],
32 +     Protocol,
33 |     Generic[T1, T2, DefaultStrT, T3],
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-generic-class]: Type parameters without defaults cannot follow type parameters with defaults
  --> src/mdtest_snippet.py:32:14
   |
32 |     Protocol[T1, T2, DefaultStrT, T3],
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              Type variables `T2` and `T3` do not have defaults
   |              Earlier TypeVar `T1` does
   |
  ::: src/mdtest_snippet.py:3:1
   |
 3 | T1 = TypeVar("T1", default=int)
   | ------------------------------- `T1` defined here
 4 |
 5 | T2 = TypeVar("T2")
   | ------------------ `T2` defined here

```
